# python-osf

./: .envrc  .gitignore  LICENSE  README.md  pyproject.toml  robot.yaml  todo.txt
docs/source/: conf.py  index.rst
examples/: directory_example.py  dump_csv.py  example.osf  metadata.py  numpy_example.py  print_channel_data.py  print_channel_data_new.py  to_csv.py
osf-specs/: osf4.md
osfspecs/: osf4.md  osf4_en.md
src/libosf/: __init__.py  core.py  decode.py  osf4_decode.py  osf4_encode.py
src/osf4/: core.py
tests/acceptance/: example.robot
tests/data/: osf3.osf  osf4_ruvvi.osf  trash.txt
tests/integration/: test_decode_osf4.py  test_osf4_encode.py  test_read.py
tests/unit/: test_core.py  test_example.py
