[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "libosf"
version = "2023.0.1dev1"
authors = [{name="Paul Jena", email="paul.jena@optimeas.de" }]
description = "Open Stream Format 4 programming utilites"
readme = "README.md"
dependencies = ["numpy"]
requires-python = ">=3.9"

[project.optional-dependencies]
tests = ["pytest", "robotframework"]
docs = ["sphinx","sphinx-rtd-theme"]

[project.urls]
"Homepage" = "https://github.com/your_name_here/something"
"Bug Tracker" = "https://github.com/your_name_here/something/issues"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests"
]